--- a/codeup_design.css
+++ b/codeup_design.css
@@ -4,3 +4,23 @@ body {
     background-color: #f0f0f0;
     font-family: Anton, sans-serif;
 }
+
+.header {
+    width: 100%;
+    background-color: #f0f0f0;
+}
+
+.smlheader {
+    width: 100%;
+    height: 30px;
+    background-color: white;
+    float: left;
+}
+
+.logo {
+    height: 105px;
+    width: 105px;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+}
