--- a/codeup_design.css
+++ b/codeup_design.css
@@ -12,9 +12,9 @@ body {
 
 .smlheader {
     width: 100%;
-    height: 40px;
+    height: 50px;
     background-color: white;
-    position: relative;
+    margin-top: 40px;
 }
 
 .logo {
@@ -23,4 +23,13 @@ body {
     display: block;
     margin-right: auto;
     margin-left: auto;
+    position: relative;
+    bottom: 25px;
+
+}
+
+.title {
+    font-family: Abel, sans-serif;
+    text-align: center;
+    margin-top: 35px;
 }
