--- a/codeup_design.css
+++ b/codeup_design.css
@@ -67,12 +67,14 @@ h1, h2 {
     text-align: center;
 }
 
+
+
 #design-orb {
     display: block;
     padding-top: 200px;
     width: 200px;
     line-height: 50%;
-
+    box-sizing: border-box;
     -moz-border-radius: 50%; /* or 50% */
     border-radius: 50%; /* or 50% */
 
@@ -89,7 +91,7 @@ h1, h2 {
     padding-top: 200px;
     width: 200px;
     line-height: 50%;
-
+    box-sizing: border-box;
     -moz-border-radius: 50%; /* or 50% */
     border-radius: 50%; /* or 50% */
 
@@ -106,7 +108,7 @@ h1, h2 {
     padding-top: 200px;
     width: 200px;
     line-height: 50%;
-
+    box-sizing: border-box;
     -moz-border-radius: 50%; /* or 50% */
     border-radius: 50%; /* or 50% */
 
@@ -123,7 +125,7 @@ h1, h2 {
     padding-top: 200px;
     width: 200px;
     line-height: 50%;
-
+    box-sizing: border-box;
     -moz-border-radius: 50%; /* or 50% */
     border-radius: 50%; /* or 50% */
 
@@ -136,24 +138,124 @@ h1, h2 {
 }
 .orb-text   {
      position: absolute;
-     bottom: 98px;
+     bottom: 90px;
      left: 50px;
  }
 
 .orb-text2   {
     position: absolute;
-    bottom: 98px;
-    left: 47px;
+    bottom: 90px;
+    left: 40px;
 }
 
 .orb-text3   {
     position: absolute;
-    bottom: 98px;
-    left: 45px;
+    bottom: 90px;
+    left: 40px;
 }
 
 .orb-text4   {
     position: absolute;
-    bottom: 98px;
-    left: 65px;
+    bottom: 90px;
+    left: 62px;
 }
+
+.frame {
+    padding: 10px;
+    background-color: #E6E6E6;
+    position: relative;
+}
+
+.picture {
+    width: 100%;
+    height: auto;
+}
+
+.abel {
+    font-family: abel, sans-serif;
+}
+
+.smallorb-text {
+    position: absolute;
+    bottom: 8px;
+    left: 6px;
+    font-size: 12px;
+}
+
+.d-orb {
+    display: block;
+    padding-top: 18px;
+    width: 18px;
+    line-height: 10%;
+    box-sizing: border-box;
+    -moz-border-radius: 50%; /* or 50% */
+    border-radius: 50%; /* or 50% */
+    background-color: #E6563B;
+    text-align: center;
+    position: absolute;
+    bottom: 15px;
+    right: 73px;
+}
+
+.dev-orb {
+    display: block;
+    padding-top: 18px;
+    width: 18px;
+    line-height: 10%;
+    box-sizing: border-box;
+    -moz-border-radius: 50%; /* or 50% */
+    border-radius: 50%; /* or 50% */
+
+    background-color: #EB9D3A;
+    text-align: center;
+    position: absolute;
+    bottom: 15px;
+    right: 52px;
+}
+
+.s-orb {
+    display: block;
+    padding-top: 18px;
+    width: 18px;
+    line-height: 10%;
+    box-sizing: border-box;
+    -moz-border-radius: 50%; /* or 50% */
+    border-radius: 50%; /* or 50% */
+
+    background-color: #7CB06C;
+    text-align: center;
+    position: absolute;
+    bottom: 15px;
+    right: 31px;
+}
+
+.h-orb {
+    display: block;
+    padding-top: 18px;
+    width: 18px;
+    line-height: 10%;
+    box-sizing: border-box;
+    -moz-border-radius: 50%; /* or 50% */
+    border-radius: 50%; /* or 50% */
+
+    background-color: #00ABA9;
+    text-align: center;
+    position: absolute;
+    bottom: 15px;
+    right: 10px;
+}
+
+.hidden {
+    visibility: hidden;
+}
+
+@media screen and (min-width:768px) {
+    .hidden {
+        visibility: revert;
+    }
+}
+
+
+
+
+
