--- a/codeup_design.css
+++ b/codeup_design.css
@@ -182,7 +182,7 @@ h1, h2 {
     font-size: 12px;
 }
 
-.d-orb {
+#d-orb {
     display: block;
     padding-top: 18px;
     width: 18px;
@@ -197,7 +197,7 @@ h1, h2 {
     right: 73px;
 }
 
-.dev-orb {
+#dev-orb {
     display: block;
     padding-top: 18px;
     width: 18px;
@@ -213,7 +213,7 @@ h1, h2 {
     right: 52px;
 }
 
-.s-orb {
+#s-orb {
     display: block;
     padding-top: 18px;
     width: 18px;
@@ -229,7 +229,196 @@ h1, h2 {
     right: 31px;
 }
 
-.h-orb {
+#h-orb {
+    display: block;
+    padding-top: 18px;
+    width: 18px;
+    line-height: 10%;
+    box-sizing: border-box;
+    -moz-border-radius: 50%; /* or 50% */
+    border-radius: 50%; /* or 50% */
+
+    background-color: #00ABA9;
+    text-align: center;
+    position: absolute;
+    bottom: 15px;
+    right: 10px;
+}
+
+#d-orb1 {
+    display: block;
+    padding-top: 18px;
+    width: 18px;
+    line-height: 10%;
+    box-sizing: border-box;
+    -moz-border-radius: 50%; /* or 50% */
+    border-radius: 50%; /* or 50% */
+    background-color: #E6563B;
+    text-align: center;
+    position: absolute;
+    bottom: 15px;
+    right: 73px;
+}
+
+#dev-orb1 {
+    display: block;
+    padding-top: 18px;
+    width: 18px;
+    line-height: 10%;
+    box-sizing: border-box;
+    -moz-border-radius: 50%; /* or 50% */
+    border-radius: 50%; /* or 50% */
+
+    background-color: #EB9D3A;
+    text-align: center;
+    position: absolute;
+    bottom: 15px;
+    right: 52px;
+}
+
+#s-orb1 {
+    display: block;
+    padding-top: 18px;
+    width: 18px;
+    line-height: 10%;
+    box-sizing: border-box;
+    -moz-border-radius: 50%; /* or 50% */
+    border-radius: 50%; /* or 50% */
+
+    background-color: #7CB06C;
+    text-align: center;
+    position: absolute;
+    bottom: 15px;
+    right: 31px;
+}
+
+#h-orb1 {
+    display: block;
+    padding-top: 18px;
+    width: 18px;
+    line-height: 10%;
+    box-sizing: border-box;
+    -moz-border-radius: 50%; /* or 50% */
+    border-radius: 50%; /* or 50% */
+
+    background-color: #00ABA9;
+    text-align: center;
+    position: absolute;
+    bottom: 15px;
+    right: 10px;
+}
+
+#d-orb2 {
+    display: block;
+    padding-top: 18px;
+    width: 18px;
+    line-height: 10%;
+    box-sizing: border-box;
+    -moz-border-radius: 50%; /* or 50% */
+    border-radius: 50%; /* or 50% */
+    background-color: #E6563B;
+    text-align: center;
+    position: absolute;
+    bottom: 15px;
+    right: 73px;
+}
+
+#dev-orb2 {
+    display: block;
+    padding-top: 18px;
+    width: 18px;
+    line-height: 10%;
+    box-sizing: border-box;
+    -moz-border-radius: 50%; /* or 50% */
+    border-radius: 50%; /* or 50% */
+
+    background-color: #EB9D3A;
+    text-align: center;
+    position: absolute;
+    bottom: 15px;
+    right: 52px;
+}
+
+#s-orb2 {
+    display: block;
+    padding-top: 18px;
+    width: 18px;
+    line-height: 10%;
+    box-sizing: border-box;
+    -moz-border-radius: 50%; /* or 50% */
+    border-radius: 50%; /* or 50% */
+
+    background-color: #7CB06C;
+    text-align: center;
+    position: absolute;
+    bottom: 15px;
+    right: 31px;
+}
+
+#h-orb2 {
+    display: block;
+    padding-top: 18px;
+    width: 18px;
+    line-height: 10%;
+    box-sizing: border-box;
+    -moz-border-radius: 50%; /* or 50% */
+    border-radius: 50%; /* or 50% */
+
+    background-color: #00ABA9;
+    text-align: center;
+    position: absolute;
+    bottom: 15px;
+    right: 10px;
+}
+
+#d-orb3 {
+    display: block;
+    padding-top: 18px;
+    width: 18px;
+    line-height: 10%;
+    box-sizing: border-box;
+    -moz-border-radius: 50%; /* or 50% */
+    border-radius: 50%; /* or 50% */
+    background-color: #E6563B;
+    text-align: center;
+    position: absolute;
+    bottom: 15px;
+    right: 73px;
+}
+
+#dev-orb3 {
+    display: block;
+    padding-top: 18px;
+    width: 18px;
+    line-height: 10%;
+    box-sizing: border-box;
+    -moz-border-radius: 50%; /* or 50% */
+    border-radius: 50%; /* or 50% */
+
+    background-color: #EB9D3A;
+    text-align: center;
+    position: absolute;
+    bottom: 15px;
+    right: 52px;
+}
+
+#s-orb3 {
+    display: block;
+    padding-top: 18px;
+    width: 18px;
+    line-height: 10%;
+    box-sizing: border-box;
+    -moz-border-radius: 50%; /* or 50% */
+    border-radius: 50%; /* or 50% */
+
+    background-color: #7CB06C;
+    text-align: center;
+    position: absolute;
+    bottom: 15px;
+    right: 31px;
+}
+
+#h-orb3 {
     display: block;
     padding-top: 18px;
     width: 18px;
